Xóa các file tạo NGU, sữa từng cái chức năng,.